--- a/docs/overview.tex
+++ b/docs/overview.tex
@@ -81,7 +81,7 @@ Here $\mathbf u$ is a velocity field that obeys the Navier-Stokes equations for 
 \end{equation}
 where $-c_s^2\nabla \ln \rho$ is the pressure term in the isothermal case and $c_s$ is the constant speed of "sound" in ether. $\nu$ is is the kinematic viscosity coefficient, which is assumed constant and $\mathbf S$ is the traceless rate-of-strain tensor:
 \begin{equation}
-S_{ij} = \frac{1}{2}\left ( \frac{\partial u_i}{\partial x_j} + \frac{\partial u_j}{\partial x_j} - \frac{2}{3}\delta_{ij}\nabla \cdot \mathbf u \right )
+S_{ij} = \frac{1}{2}\left ( \frac{\partial u_i}{\partial x_j} + \frac{\partial u_j}{\partial x_i} - \frac{2}{3}\delta_{ij}\nabla \cdot \mathbf u \right )
 \end{equation}
 The total density $\rho$ is a sum of the individual concentration densities
 \begin{equation}
